sumo/tests/duarouter/routes/style2_input/errors/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalPos' in definition of a vehicle is empty.
Error: Invalid arrivalPos definition for vehicle '0'
Quitting (on error).
